--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 .App {
-  text-align: center;
-
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
+  padding: 30px;
   flex-direction: column;
-  align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
