--- a/src/components/FamilyTreeFlow.css
+++ b/src/components/FamilyTreeFlow.css
@@ -434,11 +434,25 @@
 .react-flow__edge-default {
   stroke: hsl(215.4 16.3% 46.9%);
   stroke-width: 2;
+  stroke-dasharray: none;
+  fill: none;
 }
 
 .react-flow__edge-selected {
   stroke: hsl(221.2 83.2% 53.3%);
   stroke-width: 3;
+}
+
+/* 优化连接线路径，减少交错 */
+.react-flow__edge-path {
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+/* 连接线标记点样式 */
+.react-flow__edge .react-flow__edge-path {
+  stroke: hsl(215.4 16.3% 46.9%);
+  stroke-width: 2;
 }
 
 .react-flow__controls {
