--- a/src/components/FamilyTreeFlow.css
+++ b/src/components/FamilyTreeFlow.css
@@ -37,12 +37,9 @@
 .logo {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 40px;
+  justify-content: left;
   height: 40px;
-  background: hsl(210 40% 98%);
   border-radius: 8px;
-  border: 1px solid hsl(214.3 31.8% 91.4%);
 }
 
 .title h1 {
